2005-11-15  Vincent Noel <vincent.noel@gmail.com>

	* userprefs.c (prefs_create_defaults): Actually parse all the
	default logs.

2005-11-15  Vincent Noel <vincent.noel@gmail.com>

	* calendar.c: (calendar_init_data):
	* calendar.h:
	* logview.c: (logview_calendar_set_state),
	(logview_window_get_property), (logview_window_class_init): Use
	GObject properties.

2005-11-15  Vincent Noel <vincent.noel@gmail.com>

	* misc.c (locale_to_utf8): Better logic.
	* userprefs.c (prefs_store_window_size): Remove a few FIXMEs.

2005-11-15  Vincent Noel <vincent.noel@gmail.com>

	* userprefs.c: (prefs_monospace_font_changed),
	(prefs_menus_have_tearoff_changed), (prefs_connect): Listen to the
	menus_have_tearoff gconf key.

2005-11-15  Vincent Noel  <vincent.noel@gmail.com>

	* about.c (logview_about): Add documenters in the about
	dialog. Update email address.

2005-11-14  Vincent Noel  <vnoel@cox.net>

	* userprefs.c (prefs_create_defaults): Add a few more default logs.

2005-11-14  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_menus_set_state): Don't allow row collapsing
	for logs without days.

2005-11-14  Vincent Noel  <vnoel@cox.net>

	* logrtns.c (string_get_date_string): Allow parsing logs with
	dates in the yyyy-mm-dd format (e.g. dpkg.log).

2005-11-14  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_init): Put the filter bar above the version bar.

2005-11-14  Vincent Noel <vnoel@cox.net>

	* logrtns.c (log_open): Catch errors better.

	* logview.c: Add mnemonics in menus.

	* logview-findbar.c (logview_findbar_clear): Hide the filter bar
	when clearing the filter.

	* calendar.c: (calendar_mark_dates), (calendar_init_data),
	(calendar_day_selected), (calendar_select_date), (calendar_init),
	(calendar_class_finalize), (calendar_class_init):
	* calendar.h: Privatize the calendar stuff.

2005-11-14  Vincent Noel <vnoel@cox.net>

	* log_repaint.c: (logview_update_version_bar):
	* logview.c: (logview_select_log), (logview_add_logs_from_names):